[package]
name = "serverless-webrtc-rust"
version = "0.1.0"
authors = ["Iron Oxidizer"]
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false }
actix-web = { version = "3.2", default-features = false }
actix-web-static-files = { version = "3.0", default-features = false }
webrtc-unreliable = { version = "0.5", default-features = false }

[build-dependencies]
actix-web-static-files = { version = "3.0", default-features = false }